--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-
         tools:context=".MainActivity">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -18,14 +17,45 @@
             app:layout_constraintStart_toStartOf="parent">
         </com.google.android.material.appbar.AppBarLayout>
 
+        <!-- Header -->
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="33dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="168dp"
+            android:layout_marginTop="52dp"
+            android:text="Per"
+            android:fontFamily=""
+            android:textColor="#040867"
+            android:textSize="20sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- ==================== Header (Title & Banner) ==================== -->
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="52dp"
+            android:text="Sys"
+            android:textColor="#FB9B2B"
+            android:textSize="20sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintStart_toEndOf="@+id/tvTitle"
+            app:layout_constraintTop_toTopOf="parent" />
+        <!-- End of Header -->
 
-
-        <!-- ==================== Body (Text Fields) ==================== -->
-        <!-- TextView -->
-
-        <!-- EditText -->
+        <!-- TextFields -->
+        <TextView
+            android:id="@+id/tvFullName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="92dp"
+            android:text="Full Name"
+            android:textColor="#040867"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/etFullName"
@@ -43,49 +73,6 @@
             app:layout_constraintTop_toBottomOf="@+id/tvFullName" />
 
         <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="33dp"
-            android:layout_height="27dp"
-            android:layout_marginStart="168dp"
-            android:layout_marginTop="52dp"
-            android:text="Per"
-            android:fontFamily=""
-            android:textColor="#040867"
-            android:textSize="20sp"
-            android:textStyle="bold|italic"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/addBtn"
-            android:layout_width="135dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="18dp"
-            android:backgroundTint="#040867"
-            android:text="ADD"
-            android:textColor="#73FF73"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etAge" />
-
-        <EditText
-            android:id="@+id/etBirthdate"
-            android:layout_width="348dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/text_fields"
-            android:ems="10"
-            android:hint="DD/MM/YYYY"
-            android:inputType="date"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvBirthdate" />
-
-        <TextView
             android:id="@+id/tvStudentNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -96,6 +83,31 @@
             android:textColor="#040867"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etFullName" />
+
+        <EditText
+            android:id="@+id/etStudentNumber"
+            android:layout_width="348dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/text_fields"
+            android:ems="10"
+            android:inputType="number"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvStudentNumber" />
+
+        <TextView
+            android:id="@+id/tvEmailAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="14dp"
+            android:text="Email Address"
+            android:textColor="#040867"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etStudentNumber" />
 
         <EditText
             android:id="@+id/etEmailAddress"
@@ -112,24 +124,70 @@
             app:layout_constraintTop_toBottomOf="@+id/tvEmailAddress" />
 
         <TextView
-            android:id="@+id/tvEmailAddress"
+            android:id="@+id/tvContactNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="14dp"
-            android:text="Email Address"
+            android:text="Contact Number"
             android:textColor="#040867"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etStudentNumber" />
+            app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />
+
+        <EditText
+            android:id="@+id/etContactNumber"
+            android:layout_width="348dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/text_fields"
+            android:ems="10"
+            android:hint="09XXXXXXXXX"
+            android:inputType="number"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvContactNumber" />
 
         <TextView
-            android:id="@+id/tvAge"
+            android:id="@+id/tvBirthdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="14dp"
-            android:text="Age"
+            android:text="Birthdate"
             android:textColor="#040867"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etContactNumber" />
+
+        <EditText
+            android:id="@+id/etBirthdate"
+            android:layout_width="348dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/text_fields"
+            android:ems="10"
+            android:inputType="date"
+            android:hint="DD/MM/YYYY"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvBirthdate" />
+        <!-- End of Text Fields -->
+
+        <!-- Buttons & Checkboxes -->
+        <Button
+            android:id="@+id/addBtn"
+            android:layout_width="135dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="18dp"
+            android:backgroundTint="#040867"
+            android:text="ADD"
+            android:textColor="#73FF73"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etBirthdate" />
 
@@ -145,33 +203,19 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/addBtn"
-            app:layout_constraintTop_toBottomOf="@+id/etAge" />
+            app:layout_constraintTop_toBottomOf="@+id/etBirthdate" />
 
-        <TextView
-            android:id="@+id/textView"
+        <CheckBox
+            android:id="@+id/cbCorrect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
-            android:text="Sys"
-            android:textColor="#FB9B2B"
-            android:textSize="20sp"
-            android:textStyle="bold|italic"
-            app:layout_constraintStart_toEndOf="@+id/tvTitle"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/etAge"
-            android:layout_width="348dp"
-            android:layout_height="68dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/text_fields"
-            android:ems="10"
-            android:inputType="number"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
+            android:fontFamily="@font/roboto_medium"
+            android:text="I certify that all provided information are correct."
+            android:textColor="#040867"
+            android:textSize="13sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvAge" />
+            app:layout_constraintTop_toBottomOf="@+id/addBtn" />
 
         <Button
             android:id="@+id/submitBtn"
@@ -185,54 +229,7 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cbCorrect" />
-
-        <TextView
-            android:id="@+id/tvBirthdate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="14dp"
-            android:text="Birthdate"
-            android:textColor="#040867"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />
-
-        <TextView
-            android:id="@+id/tvFullName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="92dp"
-            android:text="Full Name"
-            android:textColor="#040867"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/etStudentNumber"
-            android:layout_width="348dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/text_fields"
-            android:ems="10"
-            android:inputType="number"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvStudentNumber" />
-
-        <CheckBox
-            android:id="@+id/cbCorrect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="I certify that all provided information are correct."
-            android:textColor="#040867"
-            android:textSize="13sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addBtn" />
+        <!-- End of Buttons & Checkboxes -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
